# ai-aircargo-planning-agent

./: .gitignore  LICENSE  README.md  requirements-dev.txt  requirements-freeze.txt  requirements.txt  setup.cfg
ai-aircargo-planning-agent/: README.md  my_planning_graph.py  results.csv  results.txt
ai-aircargo-planning-agent/.udacity-pa/: jwt
ai-aircargo-planning-agent/report/: md2pdf.sh  post-processing.ipynb  report.md  results.csv  results.ods  results.txt  results.xlsx  results_abbrev manual.txt  results_abbrev.txt  results_p4.txt
docs/: Intro to AIMA Planning Library and Project Starter Codes.ipynb  md2pdf.sh  notes.md
