[metadata]
name = ai-aircargo-planning-agent
version = attr: ai-aircargo-planning-agent.VERSION
author = Ramy Rashad
author_email = ra.rashad@gmail.com
description = Forward planning agent for air cargo deliveries
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    pandas

[options.package_data]
* = *.txt, *.rst, *.md

[options.entry_points]
console_scripts =
    aircargo-planner = ai-aircargo-planning-agent.solution:main()

[options.extras_require]
test = 
    pytest
    pytest-cov
    flake8
    black
    pre-commit

[options.packages.find]
exclude =
    ai-aircargo-planning-agent.images*
    ai-aircargo-planning-agent.ojbects*
    ai-aircargo-planning-agent.tests*